--- a/PedidosSuperPollo/PedidosSuperPollo.Android/PedidosSuperPollo.Android.csproj
+++ b/PedidosSuperPollo/PedidosSuperPollo.Android/PedidosSuperPollo.Android.csproj
@@ -71,6 +71,7 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
+    <EmbeddedResource Include="Resources\Fonts\GothamBold.ttf" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\styles.xml" />
