Ajustes en las fuentes.

--- a/PedidosSuperPollo/PedidosSuperPollo/PedidosSuperPollo.csproj
+++ b/PedidosSuperPollo/PedidosSuperPollo/PedidosSuperPollo.csproj
@@ -12,12 +12,16 @@
 
   <ItemGroup>
     <None Remove="Data\pedidos.db3" />
+    <None Remove="Fonts\Gotham-Black.otf" />
+    <None Remove="Fonts\GothamBold.ttf" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Data\pedidos.db3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Fonts\Gotham-Black.otf" />
+    <EmbeddedResource Include="Fonts\GothamBold.ttf" />
   </ItemGroup>
 
   <ItemGroup>
